[gd_scene load_steps=6 format=2]

[ext_resource path="res://Weapon/Assets/509430__seanmorrissey96__ak-47.wav" type="AudioStream" id=1]
[ext_resource path="res://Weapon/Scripts/Weapon.gd" type="Script" id=2]
[ext_resource path="res://Weapon/FireEffect.tscn" type="PackedScene" id=3]
[ext_resource path="res://Weapon/Assets/no_ammo.wav" type="AudioStream" id=4]
[ext_resource path="res://Weapon/Assets/ak47_reload.wav" type="AudioStream" id=5]

[node name="Weapon" type="Node2D"]
script = ExtResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 800, 0 )
collision_mask = 6
collide_with_areas = true

[node name="FireEffect" parent="." instance=ExtResource( 3 )]
position = Vector2( -6, 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[node name="GunShot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )

[node name="NoAmmo" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Reloading" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="shot_fired" from="." to="FireEffect" method="_on_Weapon_shot_fired"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
